--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1 class="center" style="font-size: 48pt">WOMEN IN STEM</h1>
-    <h1 class="center" id="#gendermin" style="font-size: 24pt">...or gender minorities in stem!</h1>
+    <h1 class="center" id="#gendermin" style="font-size: 24pt">...and gender minorities in stem!</h1>
     <h2>our purpose:</h2>
     <ul>
         <li>create a community of minorities in STEM</li>
