--- a/index.html
+++ b/index.html
@@ -10,18 +10,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- instagram icon import -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h1 class="center" style="font-size: 48pt">WOMEN IN STEM</h1>
-    <h1 class="center" id="#gendermin" style="font-size: 24pt">...and gender minorities in stem!</h1>
-    <h2>our purpose:</h2>
+    <div class="one">
+        <img src="https://i.pinimg.com/originals/6a/92/21/6a92214a03da4c2a81650ce079c3e6b3.gif" alt="cherry blossom tree">
+        <div>
+            <h1 class="center">WOMEN IN STEM</h1>
+            <h1 class="center" id="gendermin">...and gender minorities in STEM!</h1>
+        </div>
+    </div>
+
+    <h2>why should you join?</h2>
     <ul>
         <li>create a community of minorities in STEM</li>
-        <li>spread awareness of the hardships of being a minority in stem</li>
-        <li>more stuff goes here</li>
+        <li>access to volunteering opportunities (like experiments for young girls in stem!)</li>
+        <li>WiSTEM Mentorship Program: one-on-one guidance with a female university student in the same field as you</li>
+        <li>WiSTEM Alumni Network: their National Advisory Council and contact info for students in schools like Harvard, Princeton, Yale, and more!</li>
+        <li>more info can be found at <a href="https://womeninstem.org/">https://womeninstem.org</a></li>
     </ul>
-    https://womeninstem.org/
+
+    <h2>eager to know more?</h2>
+    <p>visit our interest meeting! it's going to be taking place wednesday, october 5th at 7:40 AM in room 138A. fill out this form if you're interested!</p>
+    <a href=https://forms.gle/A4zaVeSaa3T6hE147>link to form</a>
 </body>
 </html>
