--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 </head>
 <body>
     <div class="one">
-        <img src="https://i.pinimg.com/originals/6a/92/21/6a92214a03da4c2a81650ce079c3e6b3.gif" alt="cherry blossom tree">
         <div>
+        <img src="https://i.pinimg.com/originals/6a/92/21/6a92214a03da4c2a81650ce079c3e6b3.gif" class="yas" alt="cherry blossom tree">
+    </div>
+        <div class = "sned-help">
             <h1 class="center">WOMEN IN STEM</h1>
             <h1 class="center" id="gendermin">...and gender minorities in STEM!</h1>
         </div>
@@ -27,15 +29,19 @@
 
     <h2>why should you join?</h2>
     <ul>
-        <li>create a community of minorities in STEM</li>
-        <li>access to volunteering opportunities (like experiments for young girls in stem!)</li>
-        <li>WiSTEM Mentorship Program: one-on-one guidance with a female university student in the same field as you</li>
-        <li>WiSTEM Alumni Network: their National Advisory Council and contact info for students in schools like Harvard, Princeton, Yale, and more!</li>
-        <li>more info can be found at <a href="https://womeninstem.org/">https://womeninstem.org</a></li>
+        <li>meet a community of minority genders in STEM</li>
+        <li>access to volunteering opportunities (like experiments or tutoring for young girls in stem!)</li>
+        <li>WiSTEM Mentorship Program: guidance with a female university student in the same field as you</li>
+        <li>WiSTEM Alumni Network: contact info for students in schools like Harvard, Princeton, Yale, and more!</li>
+        <li>planning fundraisers like bake sales!</li>
+        <li>leadership positions for all grades!</li>
+        <li>fun discussions!</li>
+        <li>more info about WiSTEM can be found at <a href="https://womeninstem.org/">https://womeninstem.org</a></li>
     </ul>
 
     <h2>eager to know more?</h2>
-    <p>visit our interest meeting! it's going to be taking place wednesday, october 5th at 7:40 AM in room 138A. fill out this form if you're interested!</p>
+    <p>visit our interest meeting! it's going to be taking place tuesday, october 4th at 7:40 AM in room 138A. fill out this form if you're interested!</p>
     <a href=https://forms.gle/A4zaVeSaa3T6hE147>link to form</a>
+    <p><br>contact eilsar24@bergen.org and chlpar24@bergen.org if you have any questions.</p>
 </body>
 </html>
