--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <img class="gifthing" src="https://i.pinimg.com/originals/6a/92/21/6a92214a03da4c2a81650ce079c3e6b3.gif" alt="cherry blossom tree">
     <div class="one">
-        <img src="https://i.pinimg.com/originals/6a/92/21/6a92214a03da4c2a81650ce079c3e6b3.gif" alt="cherry blossom tree">
         <div>
             <h1 class="center">WOMEN IN STEM</h1>
             <h1 class="center" id="gendermin">...and gender minorities in STEM!</h1>
@@ -35,7 +35,7 @@
     </ul>
 
     <h2>eager to know more?</h2>
-    <p>visit our interest meeting! it's going to be taking place wednesday, october 5th at 7:40 AM in room 138A. fill out this form if you're interested!</p>
+    <p>visit our interest meeting! it's going to be taking place tuesday, october 4th at 7:40 AM in room 138A. fill out this form if you're interested!</p>
     <a href=https://forms.gle/A4zaVeSaa3T6hE147>link to form</a>
 </body>
 </html>
