--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <h2>why should you join?</h2>
     <ul>
-        <li>meet a community of minority genders in STEM</li>
+        <li>meet a community of gender minorities in STEM</li>
         <li>access to volunteering opportunities (such as culminating interest in stem in young girls)</li>
         <li>WiSTEM Mentorship Program: guidance with a female university student in the same field as you</li>
         <li>WiSTEM Alumni Network: contact info for students in schools like Harvard, Princeton, Yale, and more!</li>
