--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <h2>eager to know more?</h2>
     <p>visit our interest meeting! it's going to be taking place tuesday, october 4th at 7:40 AM in room 138A. fill out this form if you're interested!</p>
     <a href=https://forms.gle/A4zaVeSaa3T6hE147>link to form</a>
+    <p>we meet every WEDNESDAY morning!</p>
     <p><br>contact eilsar24@bergen.org and chlpar24@bergen.org if you have any questions.</p>
 </body>
 </html>
