--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 </head>
 <body>
     <div class="one">
-        <div >
-        <img class="GIFt" src="https://i.pinimg.com/originals/6a/92/21/6a92214a03da4c2a81650ce079c3e6b3.gif" alt="cherry blossom tree">
-    </div>
+        <img style="margin-left:-10px;" src="https://i.pinimg.com/originals/6a/92/21/6a92214a03da4c2a81650ce079c3e6b3.gif" alt="cherry blossom tree">
+   
         <div class = "sned-help">
             <h1 class="center">WOMEN IN STEM</h1>
             <h1 class="center" id="gendermin">...and gender minorities in STEM!</h1>
