ok now its fixed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="one">
-        <img style="margin-left:-10px;" src="https://i.pinimg.com/originals/6a/92/21/6a92214a03da4c2a81650ce079c3e6b3.gif" alt="cherry blossom tree">
+        <img style="margin-left:-10px; margin-top: -10px" src="https://i.pinimg.com/originals/6a/92/21/6a92214a03da4c2a81650ce079c3e6b3.gif" alt="cherry blossom tree">
    
         <div class = "sned-help">
             <h1 class="center">WOMEN IN STEM</h1>
