--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WISTEM</title>
+    <link rel="icon" sizes="800x800" href="wistem.png" />
     <link href="style.css" type="text/css" rel="stylesheet">
     <!-- Libre Franklin font import -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
