--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <!-- instagram icon import -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+    <nav>
+        <ul class = "navbar">
+            <li class = "navlist"><a href = "index.html">Home</a></li>
+             <li class = "navlist"><a href = "board.html">Board</a></li>
+        </ul>
+    </nav>
 <body>
     <div class="one">
         <img style="margin-left:-10px; margin-top: -10px" src="https://i.pinimg.com/originals/6a/92/21/6a92214a03da4c2a81650ce079c3e6b3.gif" alt="cherry blossom tree">
