eiliyah fixing her pic ehehehh

--- a/board.html
+++ b/board.html
@@ -30,7 +30,7 @@
           weaknesses: chemistry, any game besides tetris <br>
           stats:<br>
           procrastination - 5/5<br>
-          art - 4/5<br>
+          creativity - 4/5<br>
           woman - 5/5<br>
           in - 5/5 <br>
           stem - 5/5<br>
