updated board a lil

--- a/board.html
+++ b/board.html
@@ -7,13 +7,25 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <link rel="stylesheet" href="/style.css" />
+  <!-- Libre Franklin font import -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@1,700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/board.css" />
 </head>
 
 <body>
 
   <header>
+    <nav>
+        <ul class = "navbar">
+            <li class = "navlist"><a href = "index.html">Home</a></li>
+            <li class = "navlist"><a href = "board.html">Board</a></li>
+        </ul>
+    </nav>
     <h1 id="board">meet our board :) </h1>
   </header>
 
@@ -21,11 +33,10 @@
 
     <div class="what">
       <div class="boardpics">
-        <img src="eiliyah.jpg">
+        <img src="eiliyahCell.png">
         <p class="description"> PRESIDENT: EILIYAH SAROWAR </p>
         <p class="stats">
           pronouns: she/her <br>
-          picture: pending 😁 <br>
           strengths: computer science, tetris <br>
           weaknesses: chemistry, any game besides tetris <br>
           stats:<br>
@@ -34,7 +45,7 @@
           woman - 5/5<br>
           in - 5/5 <br>
           stem - 5/5<br>
-          catchphrase : "slay"</p>
+          catchphrase: slay</p>
 
       </div>
       <div class="boardpics">
@@ -48,7 +59,7 @@
           choir - 5/5<br>
           eyesight - 0/5<br>
           mental wellness - 1/5<br>
-          ramen lover - 5/5
+          ramen lover - 5/5 <br>
           slay? - 4/5<br>
           catchphrase: yawr</p>
       </div>
@@ -90,7 +101,7 @@
 
     <div class="what3">
       <div class="boardpics">
-        <img src="christina.jpeg">
+        <img src="christina.jpg">
         <p class="description">WEBMASTER: CHRISTINA TASHJI </p>
         <p class="stats">
           pronouns: she/her<br>
@@ -102,7 +113,7 @@
           energetic - 2.5/5<br>
           stress levels - 0/5<br>
           denial abilities - 5/5<br>
-          catchphrase: “AUR NAUR”
+          catchphrase: AUR NAUR
       </div>
       <div class="boardpics">
         <img id = "mourupa" src="mourupa.jpg">
