--- a/board.html
+++ b/board.html
@@ -14,7 +14,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/board.css"/>
+  <!-- <link rel="stylesheet" href="/board.css"/> -->
+  <link href="board.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
