--- a/board.html
+++ b/board.html
@@ -41,11 +41,11 @@
           strengths: computer science, tetris <br>
           weaknesses: chemistry, any game besides tetris <br>
           stats:<br>
-          procrastination - 5/5<br>
-          creativity - 4/5<br>
-          woman - 5/5<br>
-          in - 5/5 <br>
-          stem - 5/5<br>
+          1. procrastination - 5/5<br>
+          2. creativity - 4/5<br>
+          3. woman - 5/5<br>
+          4. in - 5/5 <br>
+          5. stem - 5/5<br>
           catchphrase: slay</p>
 
       </div>
@@ -57,11 +57,11 @@
           strengths: crocheting, drawing, genshin impacting<br>
           weaknesses: advanced placement calculus bc<br>
           stats: <br>
-          choir - 5/5<br>
-          eyesight - 0/5<br>
-          mental wellness - 1/5<br>
-          ramen lover - 5/5 <br>
-          slay? - 4/5<br>
+          1. choir - 5/5<br>
+          2. eyesight - 0/5<br>
+          3. mental wellness - 1/5<br>
+          4. ramen lover - 5/5 <br>
+          5. slay? - 4/5<br>
           catchphrase: yawr</p>
       </div>
     </div>
@@ -71,7 +71,7 @@
         <img src="brooke.jpeg">
         <p class="description">SECRETARY: BROOKE FOLEY </p>
         <p class="stats">
-          pronouns :0 she/her<br>
+          pronouns: she/her<br>
           strengths: ability to cook one-handed<br>
           weaknesses: schoolwork, homework, classwork, and puppies<br>
           stats: <br>
@@ -80,7 +80,7 @@
           3. hardworking<br>
           4. lively<br>
           5. calm (i hope)<br>
-          catchphrase :0: babooshka!</p>
+          catchphrase: babooshka!</p>
       </div>
       <div class="boardpics">
         <img src="aubrey.jpeg">
@@ -90,11 +90,11 @@
           strengths: art + character design<br>
           weaknesses: physical strength, math<br>
           stats:<br>
-          creativity - 5/5<br>
-          dexterity - 3/5<br>
-          emotional stability - 1/5<br>
-          inspiration - 4/5<br>
-          attention span - 2/5<br>
+          1. creativity - 5/5<br>
+          2. dexterity - 3/5<br>
+          3. emotional stability - 1/5<br>
+          4. inspiration - 4/5<br>
+          5. attention span - 2/5<br>
           catchphrase: *tbh creature voice* yippee!
         </p>
       </div>
@@ -109,11 +109,11 @@
           strengths: i ❤️ communication<br>
           weaknesses: everything else<br>
           stats:<br>
-          ability to pull all nighters 1/5<br>
-          music-lover - 7/5<br>
-          energetic - 2.5/5<br>
-          stress levels - 0/5<br>
-          denial abilities - 5/5<br>
+          1. ability to pull all nighters 1/5<br>
+          2. music-lover - 7/5<br>
+          3.energetic - 2.5/5<br>
+          4. stress levels - 0/5<br>
+          5. denial abilities - 5/5<br>
           catchphrase: AUR NAUR
       </div>
       <div class="boardpics">
@@ -125,9 +125,9 @@
           weaknesses: takes naps when inconvenienced, <br>
           laughs at the worst times<br>
           stats:<br>
-          strength - 0/5<br>
-          forgetfulness - 4/5<br>
-          tiredness - 5/5<br>
+          1. strength - 0/5<br>
+          2. forgetfulness - 4/5<br>
+          3. tiredness - 5/5<br>
           catchphrase: AAAAAAAAAAAAA
         </p>
       </div>
@@ -141,12 +141,12 @@
           pronouns: she/her<br>
           strengths: can draw, tells good jokes (subjective), persuasive, makes banger analogies<br>
           weaknesses: quite gullible, always late<br>
-          stats (give five personality traits and rate them out of 5) :<br>
-          swagger -  4/5<br>
-          baking capabilites -  3.5/5<br>
-          edginess -  4/5<br>
-          punctuality -  1/5<br>
-          acting ability -  3.5/5<br>
+          stats:<br>
+          1. swagger -  4/5<br>
+          2. baking capabilites -  3.5/5<br>
+          3. edginess -  4/5<br>
+          4. punctuality -  1/5<br>
+          5. acting ability -  3.5/5<br>
           catchphrase: toodles!!!
 
       </div>
@@ -155,18 +155,52 @@
         <p class="description">TREASURER: JI ECHO QIU</p>
         <p class="stats">
           pronouns: she/they<br>
-          picture: see attachment ❤️<br>
           strengths: defending business as being part of stem<br>
           weaknesses: vertically disadvantaged, fragile ego<br>
           stats:<br>
-          humor -  3/5<br>
-          kindness - 5/5<br>
-          empathy -  4/5<br>
-          physical strength -  0/5<br>
-          mental strength - 4/5<br>
+          1. humor -  3/5<br>
+          2. kindness - 5/5<br>
+          3. empathy -  4/5<br>
+          4. physical strength -  0/5<br>
+          5. mental strength - 4/5<br>
           catchphrase: HEY!!!!
         </p>
       </div>
+
+      <div class="what">
+        <div class="boardpics">
+          <img src="khashiya.png">
+          <p class="description">PHOTOGRAPHER: KHASHIYA RANGINWALA </p>
+          <p class="stats">
+            pronouns: she/her<br>
+            strengths: can draw, tells good jokes (subjective), persuasive, makes banger analogies<br>
+            weaknesses: quite gullible, always late<br>
+            stats:<br>
+            1. swagger -  4/5<br>
+            2. baking capabilites -  3.5/5<br>
+            3. edginess -  4/5<br>
+            4. punctuality -  1/5<br>
+            5. acting ability -  3.5/5<br>
+            catchphrase: toodles!!!
+  
+        </div>
+        <div class="boardpics">
+          <img src="echo.jpeg">
+          <p class="description">TREASURER: JI ECHO QIU</p>
+          <p class="stats">
+            pronouns: she/they<br>
+            strengths: defending business as being part of stem<br>
+            weaknesses: vertically disadvantaged, fragile ego<br>
+            stats:<br>
+            1. humor -  3/5<br>
+            2. kindness - 5/5<br>
+            3. empathy -  4/5<br>
+            4. physical strength -  0/5<br>
+            5. mental strength - 4/5<br>
+            catchphrase: HEY!!!!
+          </p>
+        </div>
+        
     </div>
 
   </main>
