--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
     <h2>eager to know more?</h2>
     <p>visit our interest meeting! it's going to be taking place tuesday, october 3rd at 7:40 AM in room 138A. fill out this form if you're interested!</p>
-    <a href=https://forms.gle/A4zaVeSaa3T6hE147>link to form</a>
+    <!-- <a href=https://forms.gle/A4zaVeSaa3T6hE147>link to form</a> -->
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScZyHtAXP-PEul2B4YP_evuOMSTGsCeRQf0F74dZJBC4rkWnQ/viewform?embedded=true" width="640" height="2280" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <p>we meet every TUESDAY morning!</p>
     <p><br>contact eilsar24@bergen.org and chlpar24@bergen.org if you have any questions.</p>
 </body>
