--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <p>we meet every TUESDAY morning!</p>
     <p><br>contact eilsar24@bergen.org and chlpar24@bergen.org if you have any questions.</p>
     <!-- <a href=https://forms.gle/A4zaVeSaa3T6hE147>link to form</a> -->
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScZyHtAXP-PEul2B4YP_evuOMSTGsCeRQf0F74dZJBC4rkWnQ/viewform?embedded=true" width="1500" height="3000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>    
-    
+    <div class="howtocenteradiv">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScZyHtAXP-PEul2B4YP_evuOMSTGsCeRQf0F74dZJBC4rkWnQ/viewform?embedded=true" width="640" height="2480" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>    
+    </div>
 </body>
 </html>
